[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/Pause_Menu.gd" type="Script" id=1]
[ext_resource path="res://Interface/TitleBoxes.gd" type="Script" id=2]
[ext_resource path="res://Resources/JetBrainsMono-2.304/fonts/ttf/JetBrainsMono-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Interface/DefaultButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[node name="Pause_Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.109804, 0.188235, 0.368627 )

[node name="Version" type="Label" parent="ColorRect"]
modulate = Color( 0.333333, 0.921569, 0.882353, 1 )
margin_left = 1017.0
margin_top = 638.0
margin_right = 1278.0
margin_bottom = 718.0
custom_fonts/font = SubResource( 1 )
text = "Beta 3"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
margin_top = 1.0
margin_right = 1280.0
margin_bottom = 721.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 509.0
margin_top = 219.0
margin_right = 771.0
margin_bottom = 501.0
custom_constants/separation = 50
alignment = 1
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 262.0
margin_bottom = 80.0

[node name="Name" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer2"]
modulate = Color( 0.333333, 0.921569, 0.882353, 1 )
margin_right = 262.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 262.0
margin_bottom = 282.0

[node name="Resume" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 262.0
text = "Resume"

[node name="Retry" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 52.0
margin_right = 262.0
margin_bottom = 100.0
text = "Retry Level"

[node name="Menu" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 104.0
margin_right = 262.0
margin_bottom = 152.0
text = "Main Menu"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
